# cytech_sparks

./: .gitignore  Dockerfile  LICENCE.md  Makefile  README.html  README.md  build.sbt  docker-compose.yml  presentation.pptx  pyproject.toml  start_spark.sh
data/: Esperancevie.csv  titanic_part_1.txt  titanic_part_2.parquet  titanic_part_2.txt  titanic_part_3.orc
notebooks/: 001_Création_d'un_ELT_avec_Spark_SQL.ipynb  002_Analyse_de_données_avec_les_Spark_DataFrames.ipynb  003_Machine_Learning_avec_Spark_MLLib.ipynb  004_Traitement_de_graphes_avec_Spark_GraphX.ipynb  demo.ipynb  test.ipynb
scripts/: install.sh  install_miniconda.sh  install_spark_environment.sh  uninstall.sh  uninstall_miniconda.sh  uninstall_spark_environment.sh
src/main/scala/: HelloWorld.scala  TODO.md  TitanticELT.scala  TitanticETL.scala
